[gd_scene load_steps=117 format=2]

[ext_resource path="res://assets/scripts/escapephone.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0021.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0028.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0032.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0023.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0026.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0029.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0020.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0035.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0031.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0016.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0030.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0022.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0003.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0004.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0005.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0015.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0008.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0002.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0034.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0006.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0007.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0012.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0019.png" type="Texture" id=24]
[ext_resource path="res://assets/sound/sfx/sfx_phone.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0025.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0033.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0018.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0014.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0017.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0010.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0013.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0027.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/animated/escapephone/phonepickedup.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0011.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0001.png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0009.png" type="Texture" id=37]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_0024.png" type="Texture" id=38]
[ext_resource path="res://assets/sound/sfx/sfx_phonepickup.wav" type="AudioStream" id=39]
[ext_resource path="res://assets/scripts/randompitch.gd" type="Script" id=40]
[ext_resource path="res://assets/sound/sfx/sfx_phonetalk.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0036.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0033.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0035.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0034.png" type="Texture" id=45]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0015.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0016.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0001.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0002.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0009.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0010.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0011.png" type="Texture" id=52]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0012.png" type="Texture" id=53]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0013.png" type="Texture" id=54]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0014.png" type="Texture" id=55]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0008.png" type="Texture" id=56]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0005.png" type="Texture" id=57]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0006.png" type="Texture" id=58]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0003.png" type="Texture" id=59]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0026.png" type="Texture" id=60]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0007.png" type="Texture" id=61]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0024.png" type="Texture" id=62]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0025.png" type="Texture" id=63]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0026.png" type="Texture" id=64]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0021.png" type="Texture" id=65]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0020.png" type="Texture" id=66]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0017.png" type="Texture" id=67]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0022.png" type="Texture" id=68]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0023.png" type="Texture" id=69]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0027.png" type="Texture" id=70]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0019.png" type="Texture" id=71]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0018.png" type="Texture" id=72]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0028.png" type="Texture" id=73]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0029.png" type="Texture" id=74]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0031.png" type="Texture" id=75]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0032.png" type="Texture" id=76]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_new_0030.png" type="Texture" id=77]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0027.png" type="Texture" id=78]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0028.png" type="Texture" id=79]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0029.png" type="Texture" id=80]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0030.png" type="Texture" id=81]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0012.png" type="Texture" id=82]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0015.png" type="Texture" id=83]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0010.png" type="Texture" id=84]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0013.png" type="Texture" id=85]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0016.png" type="Texture" id=86]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0014.png" type="Texture" id=87]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0017.png" type="Texture" id=88]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0011.png" type="Texture" id=89]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0018.png" type="Texture" id=90]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0021.png" type="Texture" id=91]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0022.png" type="Texture" id=92]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0019.png" type="Texture" id=93]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0020.png" type="Texture" id=94]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0023.png" type="Texture" id=95]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0024.png" type="Texture" id=96]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0025.png" type="Texture" id=97]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0003.png" type="Texture" id=98]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0002.png" type="Texture" id=99]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0004.png" type="Texture" id=100]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0006.png" type="Texture" id=101]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0008.png" type="Texture" id=102]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0007.png" type="Texture" id=103]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0009.png" type="Texture" id=104]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0005.png" type="Texture" id=105]
[ext_resource path="res://assets/sprites/animated/escapephone/phone_punch_0001.png" type="Texture" id=106]
[ext_resource path="res://assets/sound/sfx/sfx_swing.wav" type="AudioStream" id=107]
[ext_resource path="res://assets/sound/sfx/sfx_impact2.wav" type="AudioStream" id=108]
[ext_resource path="res://assets/sound/sfx/sfx_phonenew.wav" type="AudioStream" id=109]
[ext_resource path="res://assets/scripts/phoneattackdetect.gd" type="Script" id=110]
[ext_resource path="res://assets/sound/sfx/sfx_ass.wav" type="AudioStream" id=111]
[ext_resource path="res://assets/sound/sfx/sfx_punch1.wav" type="AudioStream" id=112]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 36 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 37 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 23 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 38 ), ExtResource( 26 ), ExtResource( 6 ), ExtResource( 33 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "pickedup",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 34 ), ExtResource( 106 ), ExtResource( 99 ), ExtResource( 98 ), ExtResource( 100 ), ExtResource( 105 ), ExtResource( 101 ), ExtResource( 103 ), ExtResource( 102 ), ExtResource( 104 ), ExtResource( 84 ), ExtResource( 89 ), ExtResource( 82 ), ExtResource( 85 ), ExtResource( 87 ), ExtResource( 83 ), ExtResource( 86 ), ExtResource( 88 ), ExtResource( 90 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 60 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": false,
"name": "punch",
"speed": 12.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 56 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 67 ), ExtResource( 72 ), ExtResource( 71 ), ExtResource( 66 ), ExtResource( 65 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 70 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 77 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 42 ), ExtResource( 59 ) ],
"loop": true,
"name": "ring",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 16 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 111 )

[node name="escapephone" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -45 )
scale = Vector2( 0.56, 0.56 )
frames = SubResource( 2 )
animation = "ring"
frame = 11
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -32 )
shape = SubResource( 1 )

[node name="ring" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -41 )
stream = ExtResource( 25 )
volume_db = -2.0
max_distance = 50.0
bus = "SFX"

[node name="pickip" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -41 )
stream = ExtResource( 39 )
volume_db = 0.5
bus = "SFX"

[node name="talk" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -32 )
stream = ExtResource( 41 )
volume_db = 1.0
bus = "SFX"

[node name="impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 108 )
volume_db = -1.189
bus = "SFX"

[node name="brahh" type="Timer" parent="."]
wait_time = 5.0

[node name="swing" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -49, -23 )
stream = ExtResource( 107 )
volume_db = -5.243
bus = "SFX"
script = ExtResource( 40 )

[node name="hurt1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -85, -24 )
stream = ExtResource( 112 )
volume_db = -6.55
bus = "SFX"
script = ExtResource( 40 )

[node name="ring2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -41 )
stream = ExtResource( 109 )
volume_db = -10.976
max_distance = 1225.0
bus = "SFX"

[node name="attackdetect" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource( 110 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackdetect"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="ass" type="AudioStreamPlayer2D" parent="attackdetect"]
stream = SubResource( 4 )
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 25, 0 )
rect = Rect2( -50, -50, 50, 50 )

[connection signal="area_exited" from="." to="." method="_on_escapephone_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_escapephone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_escapephone_body_exited"]
[connection signal="finished" from="talk" to="." method="_on_talk_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
